force-app/main/default/objects/Loop__dsRecipient__c/Loop__dsRecipient__c.object-meta.xml
<CustomObject>
    <label>Recipient</label>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Recipient</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>