force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__Calc_Signing_Order__c.field-meta.xml
<CustomField>
    <fullName>Loop__Calc_Signing_Order__c</fullName>
    <formula>CASE( Loop__dsRoutingOrder__c , 0 , &quot;Carbon Copy&quot; , TEXT(Loop__dsRoutingOrder__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signing Order</label>
    <type>Text</type>
</CustomField>