force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__dsCheckId__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsCheckId__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Id Check</label>
    <type>Checkbox</type>
</CustomField>