force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__dsRoutingOrder__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsRoutingOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>This specifies the order in which recipients receive the document to sign.</inlineHelpText>
    <label>Signing Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>