force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__dsSignOptions__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsSignOptions__c</fullName>
    <label>Sign Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dl.signhere</fullName>
            </value>
            <value>
                <fullName>dl.signhereoptional</fullName>
            </value>
            <value>
                <fullName>dl.initialhere</fullName>
            </value>
            <value>
                <fullName>dl.initialhereoptional</fullName>
            </value>
            <value>
                <fullName>dl.fullname</fullName>
            </value>
            <value>
                <fullName>dl.company</fullName>
            </value>
            <value>
                <fullName>dl.title</fullName>
            </value>
            <value>
                <fullName>dl.datesign</fullName>
            </value>
            <value>
                <fullName>dl.envelopeid</fullName>
            </value>
            <value>
                <fullName>dl.signerattachment</fullName>
            </value>
            <value>
                <fullName>dl.firstname</fullName>
            </value>
            <value>
                <fullName>dl.lastname</fullName>
            </value>
            <value>
                <fullName>dl.emailaddress</fullName>
            </value>
            <value>
                <fullName>dl.approve</fullName>
            </value>
            <value>
                <fullName>dl.decline</fullName>
            </value>
            <value>
                <fullName>dl.capture</fullName>
            </value>
            <value>
                <fullName>dl.mobilecapture</fullName>
            </value>
            <value>
                <fullName>dl.acceptance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>