force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__dsStaticRecipient__c.field-meta.xml
<CustomField>
    <fullName>Loop__dsStaticRecipient__c</fullName>
    <inlineHelpText>This changes which recipients the user can select from.</inlineHelpText>
    <label>Specified Recipient</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Selected Contact</fullName>
            </value>
            <value>
                <fullName>Current User</fullName>
            </value>
            <value>
                <fullName>Selected Contact</fullName>
            </value>
            <value>
                <fullName>Selected User</fullName>
            </value>
            <value>
                <fullName>User Lookup</fullName>
            </value>
            <value>
                <fullName>Contact Lookup</fullName>
            </value>
            <value>
                <fullName>Static Name-Email</fullName>
            </value>
            <value>
                <fullName>User Selected Name-Email</fullName>
            </value>
            <value>
                <fullName>Dynamic Name-Email</fullName>
            </value>
            <value>
                <fullName>Roles or Groups</fullName>
            </value>
            <value>
                <fullName>Object Owner</fullName>
            </value>
            <value>
                <fullName>Object Creator</fullName>
            </value>
            <value>
                <fullName>Current User&#39;s Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>