force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__Host_Role_Group_Names__c.field-meta.xml
<CustomField>
    <fullName>Loop__Host_Role_Group_Names__c</fullName>
    <label>Host Role/Group Names</label>
    <length>7000</length>
    <type>LongTextArea</type>
</CustomField>