force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__IntegrationOption__c.field-meta.xml
<CustomField>
    <fullName>Loop__IntegrationOption__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Option</label>
    <referenceTo>Loop__DDP_Integration_Option__c</referenceTo>
    <relationshipLabel>Recipients</relationshipLabel>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>