force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__OnIdCheckFailed__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnIdCheckFailed__c</fullName>
    <label>On Id Check Failed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>