force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__OnSessionTimeout__c.field-meta.xml
<CustomField>
    <fullName>Loop__OnSessionTimeout__c</fullName>
    <label>On Session Timeout</label>
    <length>255</length>
    <type>Text</type>
</CustomField>