force-app/main/default/objects/Loop__dsRecipient__c/fields/Loop__SigningOrder__c.field-meta.xml
<CustomField>
    <fullName>Loop__SigningOrder__c</fullName>
    <inlineHelpText>When using the standard signing options, this number is used in the document to denote which options belong to this recipient. For example, if Recipient # is 2, the dl.signhere option will be typed into the document as &quot;dl.signhere.2&quot;.</inlineHelpText>
    <label>Recipient #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>