force-app/main/default/objects/Loop__dsRecipient__c/validationRules/Loop__Recipient_Dynamic_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__Recipient_Dynamic_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Dynamic Name-Email&quot; ) ,  ISBLANK( Loop__StaticName__c )  )</errorConditionFormula>
    <errorDisplayField>Loop__StaticName__c</errorDisplayField>
    <errorMessage>A parameter is required for a Dynamic Name-Email recipient.</errorMessage>
</ValidationRule>