force-app/main/default/objects/Loop__dsRecipient__c/validationRules/Loop__Recipient_Selected_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__Recipient_Selected_Contact</fullName>
    <active>true</active>
    <description>Recipient must be related to a contact if Selected Contact is chosen.</description>
    <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c, &quot;Selected Contact&quot;),  Loop__dsContact__c = &quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Loop__dsContact__c</errorDisplayField>
    <errorMessage>Selected contact static recipient requires a contact.</errorMessage>
</ValidationRule>