force-app/main/default/objects/Loop__dsRecipient__c/validationRules/Loop__Recipient_Static_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__Recipient_Static_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Static Name-Email&quot; ) ,  AND(ISBLANK( Loop__Address__c ), ISBLANK( Loop__StaticEmail__c )) , NOT( BEGINS( Loop__StaticName__c , &quot;!&quot; ) ) )</errorConditionFormula>
    <errorDisplayField>Loop__Address__c</errorDisplayField>
    <errorMessage>An address is required for a Static Name-Email recipient.</errorMessage>
</ValidationRule>