force-app/main/default/objects/Loop__dsRecipient__c/validationRules/Loop__Recipient_Static_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__Recipient_Static_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Loop__dsStaticRecipient__c , &quot;Static Name-Email&quot; ) ,  ISBLANK( Loop__StaticName__c )  )</errorConditionFormula>
    <errorDisplayField>Loop__StaticName__c</errorDisplayField>
    <errorMessage>A static name is required for a Static Name-Email recipient.</errorMessage>
</ValidationRule>