force-app/main/default/objects/Loop__dsRecipient__c/validationRules/Loop__SignNow_Signer_requires_Role_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Loop__SignNow_Signer_requires_Role_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Loop__IntegrationOption__r.RecordType.DeveloperName = &#39;SignNow&#39;,  ISPICKVAL( Loop__dsType__c , &#39;Signer&#39;), ISBLANK( Loop__dsRoleName__c ) )</errorConditionFormula>
    <errorDisplayField>Loop__dsRoleName__c</errorDisplayField>
    <errorMessage>A SignNow Recipient with Type of Signer requires a Role Name.</errorMessage>
</ValidationRule>